add memory access impl